--- a/gr/readme.htm
+++ b/gr/readme.htm
@@ -14,7 +14,7 @@ Features:
 <li>Draws multiple graphs with different colors
 This data is stored in permanent memory (localStorage)<br>
 and is available the next time the application is launched.
-<li>Zoom in, zoom out (+ - keys on Numpad)
+<li>Zoom in, zoom out (+ - keys)
 <li>Move left, right,up, down (cursor keys)
 <li>Draws the derivative of a function (key D)
 <li>Calculates a definite integral.
