--- a/gr/readme_rus.htm
+++ b/gr/readme_rus.htm
@@ -16,7 +16,7 @@ Graph JS<br>
 Для каждого графика можно указать формулу и цвет.<br>
 Формулы и цвета графиков сохраняются в постоянном хранилище браузера (localStorage)<br>
 и сохраняются при последующем запуске приложения.
-<li>Кнопками + и – на цифровой клавиатуре можно увеличить или уменьшить масштаб.
+<li>Кнопками + и – на клавиатуре можно увеличить или уменьшить масштаб.
 <li>Стрелками курсора можно перемещать график влево, вправо, вверх или вниз.
 <li>Нажатием клавиши D можно отобразить и скрыть <b>производную функции.</b><br>
 Производная вычисляется как приращение функции делить на приращение аргумента.
