--- a/gr/graph-js.htm
+++ b/gr/graph-js.htm
@@ -67,7 +67,7 @@ Formula and color are set for each graph<br>
 
 <div class="divHelp">
 <div id="english">
-Graph JS - This application draws graphs of functions.<br>
+Graph JS v.2 - This application draws graphs of functions.<br>
 Features:<br>
 <ul>
 <li>Draws multiple graphs with different colors<br>
