--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Sergey Nechepurenko</title>
 </head>
 <body>
-<a href="https://sergsergnn.github.io/CV_Sergey_Necheperenko.pdf">Summary</a>
+<a href="https://sergsergnn.github.io/CV_Sergey_Necheperenko.pdf">Summary.</a>
 </body>
 </html>
